# pycsp3-solvers-extra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  golomb_ruler.py  graph_coloring.py  incremental.py  magic_sequence.py  mario.py  queens.py  run_all.py  send_more_money.py  solve_xcsp.py  sport_scheduling.py  warehouse.py
pycsp3_solvers_extra/: __init__.py  competition.py  loader.py  solver.py
pycsp3_solvers_extra/backends/: __init__.py  base.py  cpo_backend.py  gcs_backend.py  minizinc_backend.py  ortools_backend.py  pumpkin_backend.py  z3_backend.py
pycsp3_solvers_extra/transforms/: __init__.py  capabilities.py  context.py  decompose.py  normalize.py  pipeline.py  rewrite.py  types.py
pycsp3_solvers_extra/utils/: __init__.py
scripts/: test_cop22to25.py
tests/: __init__.py  _pytest_stub.py  conftest.py  test_base.py  test_competition_output.py  test_cpo_basic.py  test_cpo_constraints.py  test_gcs_constraints.py  test_loader.py  test_minizinc_constraints.py  test_ortools_basic.py  test_ortools_constraints.py  test_pumpkin_constraints.py  test_solver.py  test_z3_constraints.py
