[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycsp3-solvers-extra"
version = "0.1.0"
description = "Extra solver backends for pycsp3 (OR-Tools, IBM CPO)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<=3.12"
authors = [
    {name = "Sohaib AFIFI"}
]
keywords = ["constraint-programming", "csp", "xcsp3", "pycsp3", "or-tools", "cplex", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "pycsp3>=2.2",
]

[project.optional-dependencies]
ortools = ["ortools>=9.0"]
cpo = ["docplex>=2.25"]
all = ["ortools>=9.0", "docplex>=2.25"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/sohaibafifi/pycsp3-solvers-extra"
Documentation = "https://github.com/sohaibafifi/pycsp3-solvers-extra"
Repository = "https://github.com/sohaibafifi/pycsp3-solvers-extra"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycsp3_solvers_extra*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
